# boj-agent

./: .gitignore  CLAUDE.md  DEVLOG.md  README.md  prompts  pyproject.toml  pytest.ini  requirements.txt  templates
.claude/: settings.json
.claude-plugin/: README.md  marketplace.json  plugin.json
.claude/agents/: code-reviewer.md  test-writer.md
.claude/commands/: arch-setup.md  commit.md  done.md  issue.md  log.md  pr.md  review.md  start.md  test.md  verify.md
.claude/hooks/: post-edit.sh  pre-tool-use.sh  stop.sh
.claude/rules/: api.md  git.md  security.md  testing.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  feat.md  refactor.md
.github/workflows/: ci.yml  publish.yml  (+1 more)
baekjoon/: .cursorrules  .gitignore  DEVLOG.md  README.md  boj  commit.sh  run.sh  setup-boj-cli.sh
docs/: AGENT-GUIDE.md  ARCHITECTURE.md  COMMAND-SPEC.md  COMMIT-GUIDE.md  DEVLOG.md  HOW-TO-USE.md  QUICKSTART.md  README.md  VERIFICATION.md  WORKFLOW.md  branching-recommendation.md  devlog.md  edge-cases.md  issues.md  rewrite-plan.md  test-strategy.md  user-guide.md
prompts/: README.md  boj-spec-generator.md  make-environment.md  make-parse-and-tests.md  make-skeleton.md  make-spec.md  review.md  signature-review-template.md  spec-to-parse-and-tests.md  submit.md
reference/: problem-spec-contract.md  problem-spec-format.md  spec-levels.md  spec-to-parse-fewshots.md
scripts/: install.py  record_fixture.sh
src/: boj  setup-boj-cli.sh
templates/: languages.json
tests/: README.md  conftest.py  run_tests.py  run_tests.sh
(+245 files in other folders)
