[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boj-agent"
version = "1.0.0"
description = "BOJ 문제 풀이 자동화 CLI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
]

[project.scripts]
boj = "src.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock",
]

[tool.setuptools.packages.find]
include = ["src*"]
